# resume-scraper

./: README.md  pyproject.toml  python-scraper.py
config/: __init__.py
filters/: filter_resume.py  filter_resume_ai.py
llm/: openai_helper.py
platform_specific_scrapers/unstop/: unstop_scraper.py
selenium_utils/: selenium_helper.py
