[project]
name = "resume-scraper"
version = "0.0.1"
description = "A Python tool for extracting and parsing information from resumes and CV documents"

dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "attrs==24.3.0",
    "certifi==2024.12.14",
    "distro==1.9.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.8.2",
    "openai==1.59.6",
    "outcome==1.3.0.post0",
    "pydantic==2.10.5",
    "pydantic_core==2.27.2",
    "PySocks==1.7.1",
    "selenium==4.27.1",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "tqdm==4.67.1",
    "trio==0.28.0",
    "trio-websocket==0.11.1",
    "typing_extensions==4.12.2",
    "urllib3==2.3.0",
    "websocket-client==1.8.0",
    "wsproto==1.2.0"
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["selenium_utils", "config", "platform_specific_scrapers", "llm", "utils"]